# sistema_loialnosti

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  pyproject.toml
backend/apps/adminpanel/: admin.py  views.py
backend/apps/adminpanel/templatetags/: admin_dashboard.py
backend/apps/bonuses/: apps.py  models.py  services.py
backend/apps/bonuses/migrations/: 0001_initial.py  0002_bonusspendrequest_comment.py  0003_alter_bonusspendrequest_status.py  0004_alter_bonusledgerentry_options_and_more.py  (+3 more)
backend/apps/bot/: gifts.py  router.py  run_polling.py  services.py  ui.py
backend/apps/common/: choices.py
backend/apps/notifications/: telegram.py
backend/apps/referrals/: apps.py  models.py
backend/apps/users/: apps.py  models.py
backend/config/: settings.py  urls.py
backend/tests/: test_admin_change_forms_polish.py  test_admin_change_memo.py  test_admin_index.py  test_admin_notifications.py  test_admin_owner_report.py  test_admin_panel.py  test_admin_polish.py  test_bonus_expiration.py  test_bonus_expiration_commands.py  test_bonus_history.py  test_bonus_ledger_admin_filters.py  test_bonus_requests.py  test_bot_catalog_handlers.py  test_bot_dashboard_data.py  test_bot_fallback_handlers.py  test_bot_gifts_handlers.py  test_bot_lead_handlers.py  test_bot_registration_handlers.py  test_bot_runner.py  test_bot_start.py  test_bot_support_handlers.py  test_bot_ui.py  test_healthcheck.py  test_notification_sender.py  test_notification_sender_participant.py  test_referral_lead_flow.py  test_registration_flow.py  test_settings.py  test_status_labels.py
(+37 files in other folders)
