[project]
name = "referral-mvp"
version = "0.1.0"
description = "Referral MVP with Telegram bot and admin panel"
requires-python = ">=3.12"
dependencies = [
  "Django>=5.0,<5.1",
  "aiogram>=3.4,<3.5",
  "psycopg[binary]>=3.1,<3.2",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-django>=4.8,<5.0",
]
prod = [
  "gunicorn>=23.0,<24.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["apps*", "config*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
